[project]
name = "fishmlserv"
version = "0.4.9"
description = "Default template for PDM package"
authors = [
    {name = "WhiteCapella", email = "elnath1002@naver.com"},
]
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
