[project]
name = "fishmlserv"
version = "0.7.0"
description = "Default template for PDM package"
authors = [
    {name = "WhiteCapella", email = "elnath1002@naver.com"},
]
dependencies = [
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
